@@ -113,14 +113,14 @@ list(
 
 ## temporary versions while primitives are still handled by a global table
 
-genericForPrimitive <- function(f, where = topenv(parent.frame())) {
+genericForPrimitive <- function(f, where = topenv(parent.frame()), mustFind = TRUE) {
 #    if(.matchBasic(f, .ExcludePrimitiveGenerics, FALSE))
 #        stop(gettextf("methods may not be defined for primitive function %s in this version of R", sQuote(f)), domain = NA)
     env <- .findBasicFuns(where)
     funs <- get(".BasicFunsList", envir = env)
     ans <- elNamed(funs, f)
     ## this element may not exist (yet, during loading), dom't test null
-    if(identical(ans, FALSE))
+    if(mustFind && identical(ans, FALSE))
         stop(gettextf("methods may not be defined for primitive function %s in this version of R",
                       sQuote(f)),
              domain = NA)
